legadilo/static/css/article_details.css
/*
 * SPDX-FileCopyrightText: 2023-2025 Legadilo contributors
 *
 * SPDX-License-Identifier: AGPL-3.0-or-later
 */

#legadilo-article-title {
  overflow-wrap: anywhere;
}

#article-side-actions {
  max-width: 276px;
}

#article-side-actions,
#article-side-toc {
  max-height: calc(100vh - var(--content-header-height) - var(--content-footer-height) - 1vh);
  overflow: auto;
}

img {
  max-width: 100%;
  height: auto;
}

blockquote {
  padding: 0 1em;
  color: var(--bs-secondary-color);
  border-left: 0.25em solid var(--bs-border-color);
}

figcaption {
  margin-bottom: 1rem;
  font-size: 0.875em;
  color: var(--bs-secondary-color);
  padding: 0 1.25em;
}

pre {
  border: var(--bs-light-border-subtle) solid var(--bs-border-width);
  border-radius: var(--bs-border-radius);
  padding: 0.5em;
  background-color: var(--bs-tertiary-bg);
  max-width: calc(100vw - 24px);
}

code,
a {
  overflow-wrap: anywhere;
}

table {
  margin: auto;
}

tbody,
td,
tfoot,
th,
thead,
tr {
  border-width: var(--bs-border-width);
}

th,
td {
  padding: 0.25em;
}

.article-content {
  max-width: 900px;
}

.article-aside {
  max-width: 300px;
}

.article-toc {
  overflow-wrap: anywhere;
}

.article-toc a {
  border-left: 0.2em solid transparent;
  padding: 0.125rem 0 0.125rem 0.75rem;
  display: block;
  text-decoration: none;
  color: var(--bs-secondary-color);
}

.article-toc a.active,
.article-toc a:hover {
  border-left-color: var(--bs-primary-text-emphasis);
  color: var(--bs-primary-text-emphasis);
  font-weight: 500;
}

.article-nested-toc {
  padding-left: 0.75rem;
}

pre.raw-content {
  white-space: pre-wrap;
}

@media print {
  a.badge {
    background: none !important;
    color: black !important;
    border: solid 1px black !important;
  }

  .accordion,
  .header-container,
  .btn-group,
  aside,
  aside.article-aside,
  nav,
  footer,
  footer.content-footer {
    display: none !important;
  }

  img,
  figure {
    page-break-inside: auto;
    clear: both;
    float: none;
  }
}

